--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -77,8 +77,7 @@
     /// <inheritdoc />
     protected override void OnAfterRender(bool firstRender)
     {
-        Utilities.Log.LogLevel = LogLevels.Trace;
-
+        // Utilities.Log.LogLevel = LogLevels.Trace;
         if (firstRender)
         {
             InitializeScene();
