Added Introduction page with logo animation

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
@@ -6,6 +6,6 @@
     {
         // Navigate to the Common samples page on app start
         //Navigation.NavigateTo("/commonSamples/Lights.LightsSample", replace: true);
-        Navigation.NavigateTo("/quickStart", replace: true);
+        Navigation.NavigateTo("/introduction", replace: true);
     }
 }
