--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/SampleTitle.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/SampleTitle.razor
@@ -6,7 +6,7 @@
 <PageTitle>Ab4d.SharpEngine.Web - Common samples</PageTitle>
 
 <div class="ui-container">
-    <div style="position: absolute; margin: 10px; left: 10px; top: 10px; right: 10px; background: white; padding: 20px; border-radius: 5px; overflow-y: auto; max-height: 90%;">
+    <div style="background: white; padding: 20px;">
         @((MarkupString)_markdownHtmlContent)
     </div>
 </div>
@@ -17,7 +17,7 @@
     public string? TitleId { get; set; }
 
     private IJSObjectReference? _markedJSModule;
-    private string? _markdownHtmlContent;
+    private string _markdownHtmlContent = "";
 
     protected override void OnParametersSet()
     {
@@ -32,19 +32,27 @@
     private void LoadSample(string? titleId)
     {
         // Reset markdown content
-        _markdownHtmlContent = null;
+        _markdownHtmlContent = "";
+
+        titleId = AdjustTitleId(titleId);
 
         if (titleId == null)
             return;
 
-        if (titleId.EndsWith(".md", StringComparison.Ordinal))
-        {
-            _ = ShowMarkdown(titleId); // Do not wait for ShowMarkdown to finish
-        }
-        else
-        {
-            _markdownHtmlContent = $"Invalid TitleId: {titleId}";
-        }
+        _ = ShowMarkdown(titleId); // Do not wait for ShowMarkdown to finish
+    }
+
+    private string? AdjustTitleId(string? titleId)
+    {
+        if (titleId == null)
+            return null;
+
+        titleId = titleId.Replace('-', '/');  // Replace - back to / to get the correct path to the markdown file
+
+        if (!titleId.EndsWith(".md", StringComparison.Ordinal))
+            titleId += ".md";
+
+        return titleId;
     }
 
     private async Task ShowMarkdown(string titleId)
@@ -69,8 +77,7 @@
         string? markdownContent;
         try
         {
-            var mdFileName = titleId.Replace("Titles.", "Titles/");
-            markdownContent = await Http.GetStringAsync(mdFileName);
+            markdownContent = await Http.GetStringAsync(titleId);
         }
         catch (Exception ex)
         {
@@ -95,7 +102,7 @@
             }
 
             // If the current sample was not yet changed, then show the markdown content
-            if (titleId == this.TitleId)
+            if (titleId == AdjustTitleId(this.TitleId))
             {
                 _markdownHtmlContent = markdownHtmlContent;
                 StateHasChanged(); // Forces UI refresh (this is required because this event is called outside of Blazor rendering)
