Added initial delay to sharpEngineLogoAnimation

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Introduction.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Introduction.razor
@@ -73,6 +73,8 @@
         {
             // Start with going to first frame
             _sharpEngineLogoAnimation.GotoFirstFrame();
+
+            _sharpEngineLogoAnimation.SetAnimationDelay(0.3f);
             _sharpEngineLogoAnimation.StartAnimation();
         }
         else
