--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/ManualInitialization.razor
@@ -5,7 +5,6 @@
 @using Ab4d.SharpEngine.Common
 @using Ab4d.SharpEngine.Materials
 @using Ab4d.SharpEngine.SceneNodes
-@using Ab4d.SharpEngine.Utilities
 @using Ab4d.SharpEngine.WebGL
 @using Ab4d.SharpEngine.Browser
 @inject IJSRuntime JS  
@@ -14,7 +13,7 @@
 <PageTitle>Ab4d.SharpEngine.Web - Manual Initialization</PageTitle>
 
 <div style="padding: 1.5rem">
-    <h1>Ab4d.SharpEngine.Web</h1>
+    <h1>Manual initialization</h1>
 
     <p>This sample shows how to manually initialize the Ab4d.SharpEngine.Web.</p>
     <p>Instead of using the SharpEngineSceneView component, here we create a canvas DOM element and then connect to it
