--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/QuickStart.razor
@@ -14,7 +14,7 @@
 <PageTitle>Ab4d.SharpEngine.Web - Quick start</PageTitle>
 
 <div style="padding: 1.5rem">
-    <h1>Ab4d.SharpEngine.Web</h1>
+    <h1>Quick start for Ab4d.SharpEngine.Web</h1>
 
     <p>This is a example of how to use the Ab4d.SharpEngine.Web 3D rendering engine in a browser.<br/>
         This sample demonstrates only a few features of the engine.</p>
