--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor.css
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor.css
@@ -1,7 +1,8 @@
 .ui-container {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: auto;
+    min-height: 100%;
 }
 
 /* Button styling */
