--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/css/app.css
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/wwwroot/css/app.css
@@ -2,6 +2,11 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.h1, h1 {
+    font-size: 1.75rem;
+    font-weight: bold;
+}
+
 h1:focus {
     outline: none;
 }
