Prevented compiler warning in case ShowCaptureInSpector is false

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -32,7 +32,7 @@
 
     //private const string? StartupSample = "Lights.LightsSample"; // StartupSample is not used anymore. Set NavigateTo in the Pages/Index.razor instead.
 
-    private const bool ShowCaptureInSpector = false;
+    private static readonly bool ShowCaptureInSpector = false;
 
     private SharpEngineSceneView sharpEngineSceneView = null!;
     private string sample_title = "";
