Added support for BlazorUIProvider.RegisterPointerMoved

--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -55,7 +55,6 @@
         }
     }
 
-
     protected override void OnInitialized()
     {
         base.OnInitialized();
@@ -129,6 +128,9 @@
 
     private void LoadCurrentSample()
     {
+        if (_uiProvider != null && sharpEngineSceneView.Scene.GpuDevice != null)
+            _uiProvider.CanvasInterop = sharpEngineSceneView.Scene.GpuDevice.CanvasInterop;
+
         if (_currentCommonSample != null)
         {
             // Sample was already created - we just need to show it after the sharpEngineSceneView is created
