--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -11,7 +11,7 @@
 <div class="ui-container">
     <SharpEngineSceneView @ref="sharpEngineSceneView" style="display: block; width: 100%; height: 100vh; overflow: hidden;"></SharpEngineSceneView>
     
-    <div style="position: absolute; margin: 1.5rem; left: 0; top: 0;">
+    <div style="position: absolute; margin: 1.5rem; left: 0; top: 0; pointer-events: none;">
         <h1>@sample_title</h1>
         <span style="white-space: pre-wrap;">@sample_subtitle</span>
     </div>
