--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/CommonSamples.razor
@@ -9,7 +9,7 @@
 <PageTitle>Ab4d.SharpEngine.Web - Common samples</PageTitle>
 
 <div class="ui-container">
-    <SharpEngineSceneView @ref="sharpEngineSceneView" style="display: block; width: 100%; height: 100vh; overflow: hidden;"></SharpEngineSceneView>
+    <SharpEngineSceneView @ref="sharpEngineSceneView" style="display: block; width: 100%; height: 100%; overflow: hidden;"></SharpEngineSceneView>
     
     <div style="position: absolute; margin: 1.5rem; left: 0; top: 0; pointer-events: none;">
         <h1>@sample_title</h1>
