--- a/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
+++ b/Ab4d.SharpEngine.Samples.BlazorWebAssembly/Pages/Index.razor
@@ -5,7 +5,7 @@
     protected override void OnInitialized()
     {
         // Navigate to the Common samples page on app start
-        //Navigation.NavigateTo("commonSamples/Lights.LightsSample", replace: true);
+        //Navigation.NavigateTo("sampleTitle/Titles-CamerasTitle", replace: true); // Start without creating any SharpEngine object
         Navigation.NavigateTo("introduction", replace: true);
     }
 }
